--- a/src/App.css
+++ b/src/App.css
@@ -1,39 +1,138 @@
-.App {
+.fs-8 {
+  font-size: 8px;
+}
+.fs-10 {
+  font-size: 10px;
+}
+.fs-12 {
+  font-size: 12px;
+}
+.fs-14 {
+  font-size: 14px;
+}
+.fw-500 {
+  font-weight: 500;
+}
+.fw-600 {
+  font-weight: 600;
+}
+.fw-700 {
+  font-weight: 700;
+}
+
+.ml-10 {
+  margin-left: 10px;
+}
+.mr-5 {
+  margin-right: 5px;
+}
+.nav-search-border {
+  -webkit-box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.75);
+  border-radius: 4px;
+}
+.active_item{
+  color: forestgreen;
+  border-bottom: 3px solid forestgreen;
+}
+footer {
+  /* background-color:#2b2d2e; */
+  font-family: "Helvetica", sans-serif;
+  /* background-image:url('https://a0.muscache.com/airbnb/static/footer/background-317dd7c2cb678ddbdb0a983d511cb9a0.png'); */
+  /* padding-bottom:40px; */
+  bottom: 0;
+}
+
+a {
+  text-decoration: none;
+}
+footer * {
+  color: white;
+}
+select {
+  /* display: block; */
+  /* border:none; */
+  margin-bottom: 16px;
+  font-weight: bold;
+  padding: 12px 20px;
+  min-width: 17em;
+  /* background: #666; */
+  border-radius: 5px;
+}
+option {
+  padding: 5px 0;
+  border-radius: 5px;
+}
+.wrapper {
+  height: auto;
+  max-width: 1024px;
+  margin: 0 auto;
+}
+.seperator {
+  display: flex;
+  padding-top: 10px;
+  padding-bottom: 10px;
+  border-bottom: 1px solid #aaa;
+}
+.seperator:last-of-type {
+  border: none;
+}
+.seperator.column {
+  flex-direction: column;
+}
+.seperator.padded {
+  padding-right: 80px;
+  padding-left: 80px;
+}
+.col-2 {
+  flex-grow: 1.5;
+}
+.col-1 {
+  flex-grow: 1;
+  font-size: 0.9em;
+}
+.col-1 h3 {
+  font-size: 1.3em;
+  margin-bottom: 1em;
+}
+.col-1 a {
+  display: inline-block;
+  margin-bottom: 5px;
+  font-size: 0.9em;
+  letter-spacing: 0.03em;
+}
+
+.text-center {
   text-align: center;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.margin-below-1 {
+  margin-bottom: 1em;
+}
+footer a:hover {
+  color: #ccc;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-float infinite 3s ease-in-out;
+i:hover {
+  opacity: 0.8;
+  cursor: pointer;
+}
+@media (max-width: 750px) {
+  .seperator {
+    flex-direction: column;
   }
-}
-
-.App-header {
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-}
-
-.App-link {
-  color: rgb(112, 76, 182);
-}
-
-@keyframes App-logo-float {
-  0% {
-    transform: translateY(0);
+  .col-1,
+  .col-1 h3 {
+    display: none;
   }
-  50% {
-    transform: translateY(10px)
+  .col-1.first {
+    display: block;
   }
-  100% {
-    transform: translateY(0px)
+  footer {
+    text-align: center;
+  }
+  select {
+    margin-left: auto;
+    margin-right: auto;
   }
 }
